# CLI-new

./: .npmignore  CONTEXT.md  Cargo.toml  Cross.toml  LICENSE  NPM_PUBLISH.md  README.md  RELEASE_NOTES.md  Rust.md  package.json
.cursor/: agents  commands  rules
.doplan/: config.yaml  dashboard.json  state.json
.doplan/ai/agents/: README.md  coder.agent.md  designer.agent.md  devops.agent.md  planner.agent.md  reviewer.agent.md  tester.agent.md
.doplan/ai/commands/: create.md  dashboard.md  deploy.md  design.md  discuss.md  fix.md  generate.md  implement.md  keys.md  next.md  plan.md  progress.md  publish.md  (+4 more)
.github/workflows/: build-binaries.yml  publish-npm.yml  rust.yml
docs/: GITHUB_SECRETS.md
doplan/: PRD.md  RAKD.md  dashboard.md  idea-notes.md  structure.md
doplan/contracts/: api-spec.json  data-model.md
doplan/design/: DPR.md  design-tokens.json
doplan/templates/: design-template.md  plan-template.md  tasks-template.md
scripts/: build.js  generate-changelog.js  generate-checksum.js  postinstall.js  prepublish.js  release.js  version-sync.js
src/: error.rs  lib.rs  main.rs  state.rs
src/commands/: dashboard.rs  discuss.rs  feature.rs  generate.rs  implement.rs  mod.rs  next.rs  phase.rs  plan.rs  progress.rs
src/config/: mod.rs
src/context/: mod.rs
src/generators/: api_spec.rs  context.rs  data_model.rs  dpr.rs  mod.rs  prd.rs  rakd.rs  readme.rs  sops.rs  structure.rs  templates.rs
src/integration/: ide.rs  mod.rs
src/utils/: mod.rs
tests/: dashboard_test.rs  feature_test.rs  generators_test.rs  phase_test.rs  plan_test.rs
(+37 files in other folders)
